--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
   @layer base {
     :root {
-      --background: 0 0% 100%;
+      --background: 239 98% 79%;
       --foreground: 0 0% 3.9%;
 
       --card: 0 0% 100%;
@@ -13,7 +13,7 @@
       --popover: 0 0% 100%;
       --popover-foreground: 0 0% 3.9%;
 
-      --primary: 0 0% 9%;
+      --primary: 239 98% 79%;
       --primary-foreground: 0 0% 98%;
 
       --secondary: 0 0% 96.1%;
@@ -30,7 +30,7 @@
 
       --border: 0 0% 89.8%;
       --input: 0 0% 89.8%;
-      --ring: 0 0% 3.9%;
+      --ring: 0 0% 0%;
 
       --radius: 0.5rem;
     }
@@ -62,15 +62,18 @@
 
       --border: 0 0% 14.9%;
       --input: 0 0% 14.9%;
-      --ring: 0 0% 83.1%;
+      --ring: 0 0% 0%;
     }
   }
 
   @layer base {
     * {
       @apply border-border;
+      @apply cursor-default;
+      @apply cursor-pointer;
     }
     body {
       @apply bg-background text-foreground;
+      @apply cursor-pointer;
     }
   }
